--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Adarsh Savant
-#logo: /assets/img/headshot_circle.png
+logo: /assets/profile.jpg
 #description: text below image
 show_downloads: false
 theme: jekyll-theme-minimal
